src/objects/TenderTemplateConfig__mdt.object
<CustomObject>
    <fields>
        <fullName>Datatype__c</fullName>
        <label>Datatype</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                    <default>true</default>
                    <label>Boolean</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <inlineHelpText>Enter field api name.</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>OpportunityLineitem</fullName>
                </value>
                <value>
                    <fullName>Opportunity_Log__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TenderTemplate_column_Name__c</fullName>
        <label>Tender Template Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TenderTemplateConfig</label>
    <pluralLabel>TenderTemplateConfigs</pluralLabel>
</CustomObject>